--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "peoplesoutreach.org",
   "version": "1.0.0",
   "description": "peoplesoutreach.org",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "homepage": "https://github.com/peoplesoutreach/peoplesoutreach.org#readme",
+  "bugs": {
+    "url": "https://github.com/peoplesoutreach/peoplesoutreach.org/issues"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/peoplesoutreach/peoplesoutreach.org.git"
   },
-  "author": "peoplesoutreach",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/peoplesoutreach/peoplesoutreach.org/issues"
-  },
-  "homepage": "https://github.com/peoplesoutreach/peoplesoutreach.org#readme"
+  "author": "peoplesoutreach",
+  "type": "module",
+  "main": "index.ts",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
 }
