--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "license": "ISC",
   "author": "peoplesoutreach",
   "type": "module",
-  "main": "index.ts",
+  "main": "src/script/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "@tailwindcss/cli": "^4.1.17",
+    "tailwindcss": "^4.1.17"
   }
 }
