--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for peoplesoutreach-org on 2025-11-24T02:02:40Z
+# fly.toml app configuration file generated for peoplesoutreach-org on 2025-11-24T02:29:19Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'peoplesoutreach-org'
-primary_region = 'ams'
+primary_region = 'iad'
 
 [build]
 
