Set homepage to peoplesoutreach.org

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
-  "homepage": "https://peoplesoutreach.github.io/peoplesoutreach.org/",
+  "homepage": "peoplesoutreach.org/",
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
